# ChronosDB

./: alembic.ini  docker-compose.yml  main.py  pyproject.toml
chronosdb/api/: app.py  dependencies.py
chronosdb/api/rest/: __init__.py  health.py  jobs.py  tenants.py
chronosdb/config/: __init__.py  constants.py  settings.py
chronosdb/core/: __init__.py  state_machine.py
chronosdb/db/: __init__.py  seed.py  session.py
chronosdb/db/migrations/: env.py
chronosdb/db/migrations/versions/: 379bc56e0dab_initial_schema_tenants_users_jobs_steps_.py
chronosdb/models/: __init__.py  base.py  execution.py  failure_pattern.py  job.py  step.py  tenant.py  user.py
chronosdb/queue/: __init__.py  consumer.py  publisher.py  rabbitmq.py
chronosdb/repositories/: __init__.py  job_repository.py  step_repository.py  tenant_repository.py
chronosdb/schemas/: __init__.py  job.py  step.py  tenant.py
chronosdb/services/: __init__.py  job_service.py  tenant_service.py
scripts/: run_api.py  test_rabbitmq.py
tests/: conftest.py
tests/integration/: test_job_lifecycle.py
tests/unit/: test_state_machine.py
