[project]
name = "chronosdb"
version = "0.1.0"
description = "Durable async job execution engine with retries, delays, and crash recovery"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",

  "sqlalchemy>=2.0.25",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "psycopg2-binary>=2.9.9",

  "aio-pika>=9.3.1",

  "redis[hiredis]>=5.0.1",
  "hiredis>=2.3.2",

  "strawberry-graphql[fastapi]>=0.219.0",

  "python-multipart>=0.0.6",

  "prometheus-client>=0.19.0",
  "structlog>=24.1.0",
  "python-json-logger>=2.0.7",

  "python-dotenv>=1.0.0",
  "httpx>=0.26.0",
  "tenacity>=8.2.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.4",
  "pytest-asyncio>=0.23.3",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "testcontainers>=3.7.1",
  "faker>=22.0.0",
  "ruff>=0.1.13",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
  "ipython>=8.20.0",
  "watchfiles>=0.21.0"
]          # Auto-reload for dev

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
